--- a/Exit.html
+++ b/Exit.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Chat Exit</title>
+        <title>Close App</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="style/confirm.css" rel="stylesheet" type="text/css" />
@@ -11,7 +11,7 @@
     <body>
         <form role="dialog" data-type="confirm" onsubmit="return false">
             <section>
-                <p>Would you like to exit this app?</p>
+                <p>Would you like to close this app?</p>
             </section>
             <menu>
                 <button id="nem" class="recommend">No</button>
