--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 
 <html>
       <head>
-        <title>Multifunctional Notepad</title>
+        <title>MultiPad</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -42,7 +42,7 @@
                 <header>
                     <a href="#content"><span class="icon icon-menu">hide sidebar</span></a>
                     <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
-                    <h1>Multifunctional Notepad</h1>
+                    <h1>MultiPad</h1>
                 </header>
                 <div role="main">
                     <section class="gaia-list fit scroll sticky">
