--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
         <link href="style/app.css" rel="stylesheet" type="text/css"/>
         <link href="style/layout.css" rel="stylesheet" type="text/css"/>
 		<link href="style/confirm.css" rel="stylesheet" type="text/css"/>
-			
+		<script src="orientation.js"></script>	
 		<script src="jquery-1.7.1.min.js"></script>
 		<script src="map-app.js"></script>
     </head>
