--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
         <link href="style/layout.css" rel="stylesheet" type="text/css"/>
 		<link href="style/confirm.css" rel="stylesheet" type="text/css"/>
 
-
+		<script src="orientation.js"></script>
 		<script src="jquery-1.7.1.min.js"></script>
 		<script src="map-app.js"></script>
     </head>
@@ -48,18 +48,18 @@
                     <section class="gaia-list fit scroll sticky">
 						<article>
 						 <header>Make a call</header>
-							<p> Click on this button to make your call! </p> <br>
+							<p> Click on this button to make your call! </p> <br/>
 							<center><a id="tarcsazas" onclick="tel()" class="myButton">Call a number </a></center>
-								<br><br><hr>
+								<br/><br/><hr>
 							</ul>
-						</article>
-										
+									
 								<p><i> In this section you can make a call, create new contacts or searching in your
-									telephone book without closing this app.<br><br> Feel free to use whenever you need!
-									If you click on the button below you can make a call directly!<br><br>
+									telephone book without closing this app.<br/><br/> Feel free to use whenever you need!
+									If you click on the button below you can make a call directly!<br/><br/>
 									Try it out!</i>
 								</p>
-								<br><br>
+								<br/><br/>
+						</article>	
 					</section>
 				</div>
 		</section>
