--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
         <link href="style/layout.css" rel="stylesheet" type="text/css"/>
 		<link href="style/confirm.css" rel="stylesheet" type="text/css" />
 		<link href="bubble.css" rel="stylesheet" type="text/css" />
-		
+		<script src="orientation.js"></script>
 		<script src="jquery-1.7.1.min.js"></script>
 		<script src="map-app.js"></script>
 
@@ -32,7 +32,7 @@
 						<li><a href="test.html">Bubbler - the game</a></li>
 					    <li><a href="About.html">About</a></li>
                         <li><a href="Exit.html">Exit Program</a></li>
-						<br><br>
+						<br/><br/>
 						<li id="btnLocateMe" data-role="button" class="myButton">Current Position (GPS)</li>
 						<li><p id="searchResults"></p></li>
                     </ul>
@@ -55,7 +55,7 @@
 		<div id="mess3" class="message" onclick="increaseScore3()">You can't</div>
 		<div id="mess4" class="message" onclick="increaseScore4()">Tried, huh?</div>
 		<div id="mess5" class="message" onclick="increaseScore5()">Hahaha</div>
-		<br><br><br>
+		<br/><br/><br/>
 	</div>
 
 
