--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
         <link href="style/layout.css" rel="stylesheet" type="text/css"/>
 		<link href="style/confirm.css" rel="stylesheet" type="text/css"/>
 
-				
+		<script src="orientation.js"></script>
 		<script src="jquery-1.7.1.min.js"></script>
 		<script src="map-app.js"></script>
     </head>
@@ -61,7 +61,7 @@
 									If you click on the button below you can view the gallery or use your camera directly!<br><br>
 									Try it out!</i>
 								</p>
-								<br><br>
+								<br><br><br>
 					
 				  </section>
                 </div>
